# controller/coba.go
@@ -84,7 +84,7 @@ func GetPresensiID(c *fiber.Ctx) error {
 // @Success 200 {object} Presensi
 // @Failure 400
 // @Failure 500
-// @Router /ins [post]
+// @Router /insert [post]
 func InsertDataPresensi(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 	var presensi inimodel.Presensi
@@ -114,6 +114,18 @@ func InsertDataPresensi(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateData godoc
+// @Summary Update data presensi.
+// @Description Ubah data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body ReqPresensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /update/{id} [put]
 func UpdateData(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 
